--- a/data/envs/amp_gp2_env.yaml
+++ b/data/envs/amp_gp2_env.yaml
@@ -1,7 +1,9 @@
 env_name: "amp"
 
 env:
-    char_file: "data/assets/g1/g1.xml"
+    # Use the fully expanded MJCF file since the kinematic character loader
+    # cannot resolve MJCF include directives.
+    char_file: "data/assets/gp2_v2/mjcf/robot/xyber_gp2/xyber_gp2_serial.xml"
     camera_mode: "track"
 
     episode_length: 10.0 # seconds
@@ -15,18 +17,24 @@ env:
     zero_center_action: True
 
     ref_char_offset: [2.0, 0.0, 0.0] # m
-    init_pose: [0, 0, 0.8, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1.57, 0, 0, 0, 0, 0, 0, 1.57, 0, 0, 0]
+    init_pose: [0, 0, 0.72, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
 
     enable_early_termination: True
-    termination_height: 0.3
-    key_bodies: ["left_ankle_roll_link", "right_ankle_roll_link", "head_link", "left_wrist_yaw_link", "right_wrist_yaw_link"]
+    termination_height: 0.35
+    key_bodies: ["left_ankle_roll_link", "right_ankle_roll_link", "torso_link", "left_elbow_link", "right_elbow_link"]
     contact_bodies: ["left_knee_link", "left_ankle_pitch_link", "left_ankle_roll_link", "right_knee_link", "right_ankle_pitch_link", "right_ankle_roll_link"]
-    #contact_bodies: ["left_knee_link", "left_ankle_pitch_link", "left_ankle_roll_link", "right_knee_link", "right_ankle_pitch_link", "right_ankle_roll_link", "left_elbow_link", "left_wrist_roll_link", "left_wrist_pitch_link", "left_wrist_yaw_link", "right_elbow_link", "right_wrist_roll_link", "right_wrist_pitch_link", "right_wrist_yaw_link"] # cartwheel
-    
-    motion_file: "data/motions/g1/g1_walk1.pkl"
 
-    joint_err_w: [1.0, 1.0, 1.0, 0.6, 0.5, 0.5, 1.0, 1.0, 1.0, 0.6, 0.5, 0.5, 1.0, 1.0, 1.0, 0.0, 1.0, 1.0, 1.0, 0.6, 0.5, 0.5, 0.5, 1.0, 1.0, 1.0, 0.6, 0.5, 0.5, 0.5]
- 
+    motion_file: "data/motions/gp2_v2/gp2_walk.pkl"
+
+
+    # Provide a weight for every joint (excluding the root) in the order they
+    # appear in the MJCF hierarchy. The additional entries after the ankles
+    # correspond to fixed joints such as the waist, torso, shoulders, and
+    # elbows, which should remain zero so the shorter, actuated chain keeps the
+    # same weighting profile as AMP's reference humanoids.
+    joint_err_w: [1.0, 1.0, 1.0, 0.6, 0.5, 0.5, 1.0, 1.0, 1.0, 0.6, 0.5, 0.5,
+                  0.0, 0.0, 0.3, 0.0, 0.0, 0.0, 0.3, 0.0, 0.0, 0.0]
+
     reward_pose_w: 0.5
     reward_vel_w: 0.1
     reward_root_pose_w: 0.15
@@ -42,17 +50,17 @@ env:
 
 engine:
     engine_name: "isaac_gym"
-    
+
     control_mode: "pos"
     sim_freq: 60
     control_freq: 30
     env_spacing: 5
-    
+
     plane:
         static_friction: 1.0
         dynamic_friction: 1.0
         restitution: 0.0
-    
+
     sim:
         substeps: 2 # 120 Hz
         physx:
@@ -70,4 +78,4 @@ engine:
             num_inner_iterations: 10
             warm_start: 0.25
 
-
+            
